tests/common/positive/core/parent.fc
@@target c

@@system S {
    interface:
        run(): void

    machine:
        $P {
            run() {
                // empty handler
            }
        }
}

int main() {
    printf("=== Test: parent ===\n");
    S* s = @@S();

    // System should instantiate successfully
    S_run(s);

    printf("PASS: parent\n");
    S_destroy(s);
    return 0;
}
