tests/common/negative/01_domain_frame_syntax.fc
@@target c

// NEGATIVE TEST: Frame syntax in domain should fail C compilation
// Expected error: "type name requires a specifier or qualifier"

@@system NegativeTest {
    domain:
        var count: int = 0

    machine:
        $Ready { }
}

int main() { return 0; }
